--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.scss
@@ -74,3 +74,13 @@ i {
   background-color: red;
   font-weight: 700;
 }
+
+.yellowAlert {
+  background-color: yellow;
+  font-weight: 700;
+}
+
+.greenAlert {
+  background-color: green;
+  font-weight: 700;
+}
