--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-chart/arf-chart.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-chart/arf-chart.component.scss
@@ -3,6 +3,7 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
+  height: 100%;
   column-gap: 5px;
 
   .canvas-container {
@@ -13,7 +14,7 @@
     canvas {
       height: 100% !important;
       width: 100% !important;
-      max-height: 175px;
+      max-height: 188px;
     }
 
     label {
@@ -26,6 +27,11 @@
   }
 
   .chart-legends {
+    position: absolute;
+    top: 10px;
+    max-height: 120px;
+    max-width: 90px;
+    overflow: auto;
 
     .legends {
       width: fit-content;
