--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
@@ -4,13 +4,13 @@
   flex-direction: column;
   align-items: center;
   padding: 2px 5px;
-  padding-left: 5px;
   gap: 5px;
   width: 100%;
   height: 100%;
   border-radius: 10px;
   box-shadow: 0 0 2px 0 #000;
   border: 2px solid #000;
+  position: relative;
 
   /* width */
   ::-webkit-scrollbar {
@@ -38,7 +38,7 @@
     justify-content: center;
     align-items: center;
     gap: 4px;
-    padding-bottom: 15px;
+    padding-bottom: 5px;
 
     img {
       width: 25px;
