--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
@@ -85,6 +85,7 @@
     column-gap: 2px;
     width: 100%;
     padding: 0 3px;
+    cursor: pointer;
 
     &:hover {
       background-color: #d4ad68;
