--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.scss
@@ -58,7 +58,8 @@ table {
   }
 
   .body-rows:hover {
-    background-color: rgba(128, 128, 128, 0.2);
+    filter: opacity(80%) contrast(200%);
+    border: 1.3px solid #000;
   }
 }
 
