--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-chart/arf-chart.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-chart/arf-chart.component.html
@@ -1,6 +1,6 @@
 <ul *ngIf="chartType == 'line'" class="chart-legends">
   <li *ngFor="let dep of filterData.departamentosSelecionados; let i = index" class="legends">
-    <span [ngStyle]="{'background-color': colors[i]}" class="legends-box"></span>
+    <span [ngStyle]="{'background-color': dep.cor}" class="legends-box"></span>
     <label class="legends-label">{{dep.nome}}</label>
   </li>
 </ul>
