--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.html
@@ -18,8 +18,9 @@
         </select>
         <div class="overSelect"></div>
       </div>
-      <div (click)="filtrarListaDepartamentos()" [ngStyle]="{ display: mostrarCheckboxes ? 'flex' : 'none' }" class="checkboxes-container">
-        <div (click)="filtrarDashboard('chkBoxRef' + componente + i, departamento, componente)" class="checkbox"
+      <div (click)="filtrarListaDepartamentos()" [ngStyle]="{ display: mostrarCheckboxes ? 'flex' : 'none' }"
+        class="checkboxes-container">
+        <div (click)="filtrarDashboard('chkBoxRef' + componente + i, componente)" class="checkbox"
           *ngFor="let departamento of departamentos; let i = index">
           <i #checkboxesI class="fa-regular fa-square" [id]="'chkBoxRef' + componente + i"></i>
           <p>
@@ -48,6 +49,6 @@
   <!-- Pesquisa -->
   <li *ngIf="exibicaoSelect.value === 'listada'">
     <label>Pesquisa</label>
-    <input [(ngModel)]="pesquisa" class="pesquisar-input" #pesquisaInput (keydown)="enviarDadosFiltros()" type="text" />
+    <input [(ngModel)]="pesquisa" class="pesquisar-input" #pesquisaInput (keyup)="enviarDadosFiltros()" type="text" />
   </li>
 </ul>
