--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.scss
@@ -1,10 +1,63 @@
 *{
     display: flex;
+    flex-direction: column;
+    
 }
-img{
-    width: calc(1040 * 0.16 * 0.8px);
-    height: calc(1040 * 0.16 * 0.8px);
+
+.logo{
+    width: 50%;
+    margin: 20px auto 0;
+}
+.title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 19px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.05em;
+    margin: auto;
+    color: #D4AD68;
+
+    mix-blend-mode: normal;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+p,span{
+    margin: auto;
+    align-items: center;
+    text-align: center;
+    font-family: 'Roboto';
+}
+p + span{
+    color: #222672;
+    font-weight: bold;
+}
+span + ul{
+    margin-top: 25px;
+    mix-blend-mode: normal;
+    align-items: left;
+    text-align: left;
+}
+li{
+    display: flex;
+    margin-left: 20px;
+    margin-bottom: 15px;
+    flex-direction: row;
+    font-size: 19px;
+}
+li>img{
+    width: 19px;
+    margin-right: 4px;
+}
+.perfilft{
+    width: 90px;
+    height: 90px;
     border: 3px solid #1E2044;
     border-radius: 50%;
-    margin: 20% auto 0 auto;
+    margin: 20% auto 10px auto;
+}
+ul + p{
+    margin-top: 90px;
+    font-size: 14px;
+    color:gray;
 }
