--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -12,7 +12,7 @@
     <div class="second-row dash-rows">
       <arf-dashboard class="dash-cards arf-dashboard" componente="RAM" titleIcon="/assets/icones/memory-solid.svg">
       </arf-dashboard>
-      <arf-kpi class="dash-cards arf-kpi-dash">
+      <arf-kpi titleIcon="/assets/icones/query_stats.svg" class="dash-cards arf-kpi-dash">
       </arf-kpi>
     </div>
   </article>
