feat: KPIs finalizadas; TODO: grafico de usuário e pin de usuário

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.html
@@ -1,4 +1,4 @@
-<arf-dash-card class="arf-dashboard-container">
+<arf-dash-card class="arf-dash-card">
   <!-- Title -->
   <section class="title-container">
     <img [src]="titleIcon" />
