--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dash-card/arf-dash-card.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dash-card/arf-dash-card.component.scss
@@ -1,7 +1,14 @@
-ng-content {
+.arf-dash-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #fff;
-  padding: 5px 0 0.5px 2px;
-  height: 100%;
+  padding: 2px 1px;
+  gap: 5px;
   width: 100%;
+  height: 100%;
   border-radius: 10px;
+  box-shadow: 0 0 2px 0 #000;
+  border: 2px solid #000;
+  position: relative;
 }
