--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-kpi/arf-kpi.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-kpi/arf-kpi.component.html
@@ -1,4 +1,4 @@
-<arf-dash-card>
+<arf-dash-card class="arf-dash-card">
   <!-- Title -->
   <section class="title-container">
     <img src="assets/icones/query_stats.svg" />
