--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-chart/arf-chart.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-chart/arf-chart.component.scss
@@ -17,7 +17,7 @@
       max-height: 188px;
     }
 
-    label {
+    .departamentoDisclaimer {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -52,4 +52,38 @@
     }
 
   }
+}
+
+::ng-deep {
+  .fa-arrow-left {
+    font-size: 1.3rem;
+    cursor: pointer;
+    align-self: flex-start;
+    position: absolute;
+    top: 5px;
+    left: 10px;
+
+    &:hover {
+      color: #d4ad68;
+    }
+  }
+}
+
+.date-inputs {
+  margin-bottom: 5px;
+}
+
+.chartUserOn {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.metrica-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5px 0;
+  font-size: .9rem;
 }
