--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
@@ -1,4 +1,5 @@
-:host {
+.arf-filters {
+  padding: 5px 0;
 }
 
 .title-container {
@@ -27,36 +28,6 @@
   row-gap: 5px;
   height: 100%;
   width: 100%;
-
-  .date-container {
-    display: flex;
-    column-gap: 10px;
-
-    input {
-      text-align: center;
-    }
-
-    .dates {
-      font-size: 0.9rem;
-      display: flex;
-      align-items: center;
-      column-gap: 5px;
-    }
-  }
-
-  #hoje-btn,
-  .hoje-btn {
-    background: rgba(30, 32, 68, 0.8);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    color: #fff;
-    padding: 3px;
-    cursor: pointer;
-
-    &-on {
-      background: #1E2044 !important;
-    }
-  }
 }
 
 /* width */
