--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-kpi/arf-kpi.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-kpi/arf-kpi.component.scss
@@ -36,7 +36,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     color: #fff;
-    padding: 3px;
+    // padding: 3px;
     cursor: pointer;
     height: fit-content;
     align-self: flex-end;
@@ -69,9 +69,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 5px;
+  gap: 10px;
   height: 100%;
-  padding: 5px 0;
+  padding: 5px 20px;
 
   .kpi-item {
     width: 30%;
@@ -88,11 +88,11 @@
     }
 
     &-label {
-      font-size: 1.2rem;
+      font-size: 1rem;
       border-radius: 50%;
       border: 1px solid #000;
-      width: 50px;
-      height: 50px;
+      width: 48px;
+      height: 48px;
       display: flex;
       align-items: center;
       justify-content: center;
