--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.html
@@ -1,43 +1,61 @@
-<table>
+<table *ngIf="!chartUserOn; else chart">
   <tr class="head-rows">
     <th (click)="alternarOrdem('iconRef' + componente + i, userFilter)"
       *ngFor="let userFilter of userFilters; let i = index">
-      <div>
-        <label> {{ userFilter }} </label>
+      <div *ngIf="i == 0; else genericFilter">
+        <i class="dot-icon fa-solid fa-location-dot"></i>
         <i #filterIcons [ngStyle]="{'display': userFilter == 'Data' ? 'none' : 'block'}"
-          [id]="'iconRef' + componente + i" [ngClass]="[imgClass]"></i>
+          [id]="'iconRef' + componente + i" [ngClass]="imgClass"></i>
       </div>
+      <ng-template #genericFilter>
+        <div>
+          <label> {{ userFilter }} </label>
+          <i #filterIcons [ngStyle]="{'display': userFilter == 'Data' ? 'none' : 'block'}"
+            [id]="'iconRef' + componente + i" [ngClass]="imgClass"></i>
+        </div>
+      </ng-template>
     </th>
   </tr>
-  <tr class="body-rows" *ngFor="let userData of userDataFiltered">
-    <td>
+  <tr *ngFor="let userData of userDataFiltered" class="body-rows">
+    <td (click)="userData.isPinned = !userData.isPinned; pesquisa()">
+      <i class="pin-icon fa-solid fa-thumbtack"
+        [ngClass]="{'pinned': userData.isPinned, 'notPinned': !userData.isPinned}">
+      </i>
+    </td>
+    <td (click)="toggleChartUser(true)">
       {{ userData.id }}
     </td>
-    <td *ngIf="componente == 'HDD'">
+    <td (click)="toggleChartUser(true)" *ngIf="componente == 'HDD'">
       {{ userData.id_hd }}
     </td>
-    <td>
+    <td (click)="toggleChartUser(true)">
       {{ userData.usuario }}
     </td>
-    <td>
+    <td (click)="toggleChartUser(true)">
       {{ userData.departamento }}
     </td>
-    <td>
+    <td (click)="toggleChartUser(true)">
       {{ userData.date }}
     </td>
-    <td [ngClass]="gerarStatus(userData.uso_relativo)">
+    <td (click)="toggleChartUser(true)" [ngClass]="gerarStatus(userData.uso_relativo)">
       {{ (userData.uso_relativo).toFixed(1) + '%'}}
     </td>
-    <td *ngIf="componente == 'CPU'" [ngClass]="gerarStatus(userData.temperatura)">
+    <td (click)="toggleChartUser(true)" *ngIf="componente == 'CPU'" [ngClass]="gerarStatus(userData.temperatura)">
       {{ (userData.temperatura).toFixed(1) + 'ºC' }}
     </td>
   </tr>
 
-  <p class="text-centered" *ngIf="userDataFiltered.length == 0 && temDepartamentosSelecionados">
+  <p class="text-centered" *ngIf="userDataFiltered.length == 0 && hasDepartamentosSelecionados">
     Nenhum item encontrado!
   </p>
 
-  <p class="text-centered" *ngIf="!temDepartamentosSelecionados">
+  <p class="text-centered" *ngIf="!hasDepartamentosSelecionados && userDataFiltered.length == 0">
     Nenhum departamento selecionado!
   </p>
 </table>
+
+<ng-template #chart>
+  <arf-chart [componente]="componente" [filterData]="filterData" [chartUserOn]="chartUserOn">
+    <i (click)="toggleChartUser(false)" class="fa-solid fa-arrow-left"></i>
+  </arf-chart>
+</ng-template>
