--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-dash-card/arf-dash-card.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-dash-card/arf-dash-card.component.scss
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #fff;
-  padding: 2px 1px;
-  gap: 5px;
+  padding: 2px;
   width: 100%;
   height: 100%;
   border-radius: 10px;
