fix: imagens do navbar

--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.html
@@ -1,14 +1,13 @@
 <img class="logo" src="../../../../assets/imagens/logo1.png">
 <p class="title">Arfas Oversight</p>
-<img class="perfilft" src="https://ufmg.br/thumbor/x5Q4qSKv0hiAhUah-14bg2JgEUg=/0x0:873x586/712x474/https://ufmg.br/storage/0/8/e/3/08e37d5a879b5bda3c5f7c5a2bd56c9e_15725356159034_1003791973.jpeg">
+<img class="perfilft" src="../../../../assets/imagens/user.jpg">
 <p>Bem-vindo,</p>
-<span>Fulano</span>
+<span>User</span>
 
     <ul>
-        <li><img src="../../../../assets/imagens/navItem1 (2).png" alt=""> Dashboard</li>
-        <li><img src="../../../../assets/imagens/navItem1 (1).png" alt=""> KPIs</li>
-        <li><img src="../../../../assets/imagens/navItem1 (3).png" alt=""> Cadastro</li>
-        <li><img src="../../../../assets/imagens/navItem1 (4).png" alt=""> Editar dados</li>
-        <li><img src="../../../../assets/imagens/navItem1 (5).png" alt=""> Sair</li>
+        <li><img src="../../../../assets/imagens/navItem (1).png" alt="imagem"> Dashboard</li>
+        <li><img src="../../../../assets/imagens/navItem (3).png" alt="imagem"> Cadastro</li>
+        <li><img src="../../../../assets/imagens/navItem (4).png" alt="imagem"> Editar dados</li>
+        <a [routerLink]="['/']"><li ><img src="../../../../assets/imagens/navItem (5).png" alt="imagem"> Sair</li></a>
     </ul>
     <p>©Arfas Monitoria</p>
